Quake/common.h

extern int	  com_argc;
extern char **com_argv;
/* safe mode: in true, the engine will behave as if one
   of these arguments were actually on the command line:
   -nosound, -nocdaudio, -nomidi, -stdvid, -dibonly,
   -nomouse, -nojoy, -nolan
 */

int COM_CheckParm (const char *parm);
// opens a file in the per-user preferences dir (%APPDATA%\vkQuake on Windows)
FILE *COM_FOpenPrefFile (const char *filename, const char *mode);
void		COM_FileBase (const char *in, char *out, size_t outsize);
void		COM_AddExtension (char *path, const char *extension, size_t len);
void	COM_SeedRand (uint64_t seed);
int32_t COM_Rand (void);
// Rust migration seam: thread-local globals are not reachable through
// bindgen, so ported code reads them through these accessors
qfileofs_t COM_ThreadFileSize (void);
int		   COM_ThreadFileFromPak (void);
qfilesize_t COM_FOpenFile (const char *filename, FILE **file, unsigned int *path_id);
byte *COM_LoadFile (const char *path, unsigned int *path_id);
/* The following FS_*() stdio replacements are necessary if one is
 * to perform non-sequential reads on files reopened on pak files
 * because we need the bookkeeping about file start/end positions.
 * Allocating and filling in the fshandle_t structure is the users'
 * responsibility when the file is initially opened. */

typedef struct _fshandle_t
{
	FILE	   *file;
	qboolean	pak;	/* is the file read from a pak */
	qfileofs_t	start;	/* file or data start position */
	qfilesize_t length; /* file or data size */
	qfileofs_t	pos;	/* current position relative to start */
} fshandle_t;
// Only read 2**31 elements max, should be enough still
size_t FS_fread (void *ptr, size_t size, size_t nmemb, fshandle_t *fh);
int			FS_fseek (fshandle_t *fh, qfileofs_t offset, int whence);
void		FS_rewind (fshandle_t *fh);
int			FS_fclose (fshandle_t *fh);
char	   *FS_fgets (char *s, int size, fshandle_t *fh);