rust/quake-ctest/include/c_ref_prelude.h

void Sys_Error (const char *error, ...);
void Con_Printf (const char *fmt, ...);
void Cvar_Set (const char *var_name, const char *value);
void Con_Warning (const char *fmt, ...);
void Con_DPrintf (const char *fmt, ...);
void Con_DPrintf2 (const char *fmt, ...);