rust/quake-c-sys/src/generated.rs

/* automatically generated by rust-bindgen 0.72.1 */

// opaque stdio FILE: only ever passed through as a pointer
#[repr(C)]
pub struct FILE {
    _opaque: [u8; 0],
}

pub type byte = ::std::os::raw::c_uchar;
pub type qboolean = bool;
unsafe extern "C" {
    pub fn Mem_Alloc(size: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn Mem_AllocNonZero(size: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn Mem_Realloc(
        ptr: *mut ::std::os::raw::c_void,
        size: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn Mem_Free(ptr: *const ::std::os::raw::c_void);
}
pub type qfilesize_t = ::std::os::raw::c_longlong;
pub type qfileofs_t = ::std::os::raw::c_longlong;
unsafe extern "C" {
    pub fn Sys_ftell(file: *mut FILE) -> qfileofs_t;
}
unsafe extern "C" {
    pub fn Sys_Error(error: *const ::std::os::raw::c_char, ...) -> !;
}
unsafe extern "C" {
    pub static mut com_argc: ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub static mut com_argv: *mut *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn COM_CheckParm(parm: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn COM_FOpenPrefFile(
        filename: *const ::std::os::raw::c_char,
        mode: *const ::std::os::raw::c_char,
    ) -> *mut FILE;
}
unsafe extern "C" {
    pub fn COM_FileBase(
        in_: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_char,
        outsize: usize,
    );
}
unsafe extern "C" {
    pub fn COM_AddExtension(
        path: *mut ::std::os::raw::c_char,
        extension: *const ::std::os::raw::c_char,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn COM_SeedRand(seed: u64);
}
unsafe extern "C" {
    pub fn COM_Rand() -> i32;
}
unsafe extern "C" {
    pub fn COM_ThreadFileSize() -> qfileofs_t;
}
unsafe extern "C" {
    pub fn COM_ThreadFileFromPak() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn COM_FOpenFile(
        filename: *const ::std::os::raw::c_char,
        file: *mut *mut FILE,
        path_id: *mut ::std::os::raw::c_uint,
    ) -> qfilesize_t;
}
unsafe extern "C" {
    pub fn COM_LoadFile(
        path: *const ::std::os::raw::c_char,
        path_id: *mut ::std::os::raw::c_uint,
    ) -> *mut byte;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _fshandle_t {
    pub file: *mut FILE,
    pub pak: qboolean,
    pub start: qfileofs_t,
    pub length: qfilesize_t,
    pub pos: qfileofs_t,
}
pub type fshandle_t = _fshandle_t;
unsafe extern "C" {
    pub fn FS_fread(
        ptr: *mut ::std::os::raw::c_void,
        size: usize,
        nmemb: usize,
        fh: *mut fshandle_t,
    ) -> usize;
}
unsafe extern "C" {
    pub fn FS_fseek(
        fh: *mut fshandle_t,
        offset: qfileofs_t,
        whence: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn FS_rewind(fh: *mut fshandle_t);
}
unsafe extern "C" {
    pub fn FS_fclose(fh: *mut fshandle_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn FS_fgets(
        s: *mut ::std::os::raw::c_char,
        size: ::std::os::raw::c_int,
        fh: *mut fshandle_t,
    ) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn Cvar_Set(var_name: *const ::std::os::raw::c_char, value: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn Con_Printf(fmt: *const ::std::os::raw::c_char, ...);
}
unsafe extern "C" {
    pub fn Con_Warning(fmt: *const ::std::os::raw::c_char, ...);
}
unsafe extern "C" {
    pub fn Con_DPrintf(fmt: *const ::std::os::raw::c_char, ...);
}
unsafe extern "C" {
    pub fn Con_DPrintf2(fmt: *const ::std::os::raw::c_char, ...);
}
